JDK-8255269 incorrectly replaced average copy time

XMLWordPrintable

    • gc
    • b01

      The patch for JDK-8255269 incorrectly replaced the average copy time computation with the one from JDK 11. This line from the patch

      double average_copy_time = average_time_ms(G1GCPhaseTimes::ObjCopy);

      should be

      double average_copy_time = average_time_ms(G1GCPhaseTimes::ObjCopy) + average_time_ms(G1GCPhaseTimes::OptObjCopy);

            Assignee:
            Paul Hohensee
            Reporter:
            Paul Hohensee
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: