8255468: JDK-8255269 incorrectly replaced average copy time